Fixed some namespaces , updated some packages , and fixed seed (Kostas)

--- a/Armada.WebApp/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Armada.WebApp/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Armada.WebApp.Models.ExternalLoginConfirmationViewModel
+﻿@model Armada.WebApp.ViewModels.AccountViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
