--- a/Armada.WebApp/Views/Account/ForgotPassword.cshtml
+++ b/Armada.WebApp/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Armada.WebApp.Models.ForgotPasswordViewModel
+﻿@model Armada.WebApp.ViewModels.AccountViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
