--- a/Armada.WebApp/Views/Account/Login.cshtml
+++ b/Armada.WebApp/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
-﻿@using Armada.WebApp.Models
-@model LoginViewModel
+﻿@using Armada.WebApp.ViewModels.AccountViewModels
+@model Armada.WebApp.ViewModels.AccountViewModels.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
