--- a/Armada.WebApp/Views/Account/Register.cshtml
+++ b/Armada.WebApp/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Armada.WebApp.Models.RegisterViewModel
+﻿@model Armada.WebApp.ViewModels.AccountViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
