--- a/Armada.WebApp/Views/Account/ResetPassword.cshtml
+++ b/Armada.WebApp/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Armada.WebApp.Models.ResetPasswordViewModel
+﻿@model Armada.WebApp.ViewModels.AccountViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
