--- a/Armada.WebApp/Views/Account/SendCode.cshtml
+++ b/Armada.WebApp/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model Armada.WebApp.Models.SendCodeViewModel
+﻿@model Armada.WebApp.ViewModels.AccountViewModels.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
