--- a/Armada.WebApp/Views/Account/VerifyCode.cshtml
+++ b/Armada.WebApp/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model Armada.WebApp.Models.VerifyCodeViewModel
+﻿@model Armada.WebApp.ViewModels.AccountViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
