--- a/Armada.WebApp/Views/Manage/AddPhoneNumber.cshtml
+++ b/Armada.WebApp/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model Armada.WebApp.Models.AddPhoneNumberViewModel
+﻿@model Armada.WebApp.ViewModels.ManageViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
