--- a/Armada.WebApp/Views/Manage/ChangePassword.cshtml
+++ b/Armada.WebApp/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Armada.WebApp.Models.ChangePasswordViewModel
+﻿@model Armada.WebApp.ViewModels.ManageViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
