--- a/Armada.WebApp/Views/Manage/Index.cshtml
+++ b/Armada.WebApp/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Armada.WebApp.Models.IndexViewModel
+﻿@model Armada.WebApp.ViewModels.ManageViewModels.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
