--- a/Armada.WebApp/Views/Manage/ManageLogins.cshtml
+++ b/Armada.WebApp/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model Armada.WebApp.Models.ManageLoginsViewModel
+﻿@model Armada.WebApp.ViewModels.ManageViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
