--- a/Armada.WebApp/Views/Manage/SetPassword.cshtml
+++ b/Armada.WebApp/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Armada.WebApp.Models.SetPasswordViewModel
+﻿@model Armada.WebApp.ViewModels.ManageViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
