--- a/Armada.WebApp/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/Armada.WebApp/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model Armada.WebApp.Models.VerifyPhoneNumberViewModel
+﻿@model Armada.WebApp.ViewModels.ManageViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
