--- a/Armada.WebApp/Views/Home/Index.cshtml
+++ b/Armada.WebApp/Views/Home/Index.cshtml
@@ -2,30 +2,100 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+    <!-- Indicators -->
+    <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+    </ul>
+
+    <!-- The slideshow -->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="~/Content/img/space1.jpeg" alt="Space1" width="100%" height="950">
+        </div>
+        <div class="carousel-item">
+            <img src="~/Content/img/space2.jpeg" alt="Space2" width="100%" height="950">
+        </div>
+        <div class="carousel-item">
+            <img src="~/Content/img/space3.jpeg" alt="Space3" width="100%" height="950">
+        </div>
+        <div class="carousel-item">
+            <img src="~/Content/img/space4.jpeg" alt="Space4" width="100%" height="950">
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </a>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+
+<!-- Jumbotron -->
+
+<div class="container-fluid padding p-5">
+    <div class="row text-center">
+        <div class="col-12">
+            <h1 class="display-4">Join the Imperial Armada and see the Galaxy</h1>
+        </div>
+        <hr />
+        <div class="col-12">
+            <p class="lead">
+                Do you think you have what it takes to join the most elite force in the galaxy? 
+                The Imperial Armada is always looking for fresh recruits to bolster its ranks and bring
+                peace and security to the Imperium.
+            </p>
+            <p class="lead">
+                Fill out the <a href="#">form</a> today and an Inquisitor will get in touch with you shortly.
+            </p>
+        </div>
     </div>
 </div>
+
+<!--- Two Column Section -->
+<div class="container-fluid padding p-5">
+    <div class="row padding">
+        <div class="col-lg-8">
+            <h2>If you can find it on the Net...</h2>
+            <p>
+                The Imperial Army, also known as the Imperial Forces or Imperial ground forces, is the land-based branch of the Galactic Empire's military. 
+                As the ultimate evolution of the Grand Army of the Republic, the Imperial Army swiftly asserted dominance throughout the galaxy, making use of highly trained soldiers, mechanized walkers, and overwhelming numbers. 
+            </p>
+            <p>
+                The Imperial Army works in tandem with the forces of the Imperial Navy, relying on the numerous fleets to transport legions of troopers across the far reaches of the galaxy.
+                The most common soldiers of the Empire's ground forces are known as the Stormtroopers, the core infantry of the army tasked with establishing Imperial regimes and pacifying troublesome worlds.
+            </p>
+        </div>
+        <div class="col-lg-4">
+            <img src="~/Content/img/enlist.jpg" class="img-fluid" width="400" />
+        </div>
+    </div>
+</div>
+
+<script>
+
+    $("#admirals").click(function() {
+
+
+
+    });
+
+
+    $.ajax({
+        type: "POST",
+        url: "/url",
+        data: "name=John&location=Boston",
+        dataType: "json",
+        success: function (response) {
+
+        }
+    });
+
+
+</script>
