Added About page and some slight changes to Home Index

--- a/Armada.WebApp/Views/Home/About.cshtml
+++ b/Armada.WebApp/Views/Home/About.cshtml
@@ -1,7 +1,66 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="container text-center p-4">
+    <h1>Our Mission</h1>
+    <hr />
+    <p>To provide freedom, justice and security to our new empire</p>
+</div>
+
+
+<div class="container-fluid padding p-5">
+    <div class="row padding">
+        <div class="col-lg-8">
+            <h2>The Empire cares about your safety</h2>
+            <p>
+                The Imperial ideals of the Galactic Imperium could be dated back to the Old Republic's time period.
+            </p>
+            <p>
+                The civil and military superstructure of the Old Republic were overhauled immediately under the personal direction of our glorious Emperor.
+                With vast portions of the galaxy still unconquered, the Grand Army of the Republic became the Imperial Army, while the Republic Navy became the Imperial Armada.
+            </p>
+            <p>
+                Since the onset of the Clone Wars, the Empire endeavors to strengthen its security and stability through the creation of new organizations such as the Commission for the Protection of the Empire (COMPOE),
+                whose objectives are to increase public morale, promote patriotism, and foster anti-Separatist sentiment within the general population.
+            </p>
+        </div>
+        <div class="col-lg-4">
+            <video class="video-fluid z-depth-1" autoplay loop controls muted>
+                <source src="~/Content/media/destroyer.mp4" type="video/mp4" />
+            </video>
+        </div>
+    </div>
+</div>
+
+<hr />
+
+<div class="container-fluid padding p-5">
+    <div class="row padding">
+        <div class="col-lg-2">
+            <img src="~/Content/img/about.jpg" height="400" alt="rebel scum" />
+        </div>
+        <div class="col-lg-10 pl-5">
+            <p>
+                "Fellow Humans, I come to you in the wake of recent events to issue a call to reason. Let no human deny the perils of our time. While we battle one another, divided by the petty strife of our common history,
+                the tide of greater conflict is turning against us, threatening to destroy all that we have accomplished. It is time for us as nations and as individuals to set aside our long-standing feuds and unite.
+                The tides of an unwinnable war are upon us and we must seek refuge on higher ground lest we be swept away by the flood.
+            </p>
+            <p>
+                The corrupt Republic is no more. Whatever semblance of unity and protection it once provided is a phantom... a memory.
+                With our enemies left unchecked, who will you turn to for protection? The devastation wrought by the alien invaders is self-evident. We have seen our homes and villages destroyed by the calculated blows of the Custodians.
+                We have seen first hand our friends and loved ones consumed by the nightmarish Reapers.
+            </p>
+            <p>
+                Unprecedented and unimaginable though they may be, these are the signs of our time.
+                The time has come my fellow Humans to rally to a new banner. In unity lies strength; already many of the dissident factions have joined us. Out of the many we shall forge an indivisible whole capitulating only to a single throne.
+                And from that throne, I shall watch over you. From this day forward let no human make war upon any other human. Let no man-made agency conspire against this new beginning,
+                and let no man consort with alien powers, and to all the enemies of humanity: seek not to bar our way. For we shall win through, no matter the cost!"
+            </p>
+            <small>-Excerpt from our Emperor's <b>inauguration speech.</b></small>
+        </div>
+    </div>
+</div>
+
+
+
