--- a/Armada.WebApp/Views/Home/Index.cshtml
+++ b/Armada.WebApp/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
 <div class="container-fluid padding p-5">
     <div class="row padding">
         <div class="col-lg-8">
-            <h2>If you can find it on the Net...</h2>
+            <h2>Get ready for a creative, exciting career</h2>
             <p>
                 The Imperial Army, also known as the Imperial Forces or Imperial ground forces, is the land-based branch of the Galactic Empire's military. 
                 As the ultimate evolution of the Grand Army of the Republic, the Imperial Army swiftly asserted dominance throughout the galaxy, making use of highly trained soldiers, mechanized walkers, and overwhelming numbers. 
@@ -73,7 +73,14 @@
             </p>
         </div>
         <div class="col-lg-4">
-            <img src="~/Content/img/enlist.jpg" class="img-fluid" width="400" />
+            
+            <div class="figure">
+                <a href="~/Home/About">
+                    <img src="~/Content/img/enlistDark.jpg" class="img-fluid image-main"/>
+                    <img src="~/Content/img/enlistHighlight.jpg" class="img-fluid image-hover"/>
+                </a>
+            </div>
+            
         </div>
     </div>
 </div>
