--- a/Armada.WebApp/Content/Site.css
+++ b/Armada.WebApp/Content/Site.css
@@ -22,3 +22,24 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.figure {
+    position: relative;
+    width: 400px;
+    max-width: 100%;
+}
+
+.figure img.image-hover {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    object-fit: contain;
+    opacity: 0;
+    transition: opacity .2s;
+}
+
+.figure:hover img.image-hover {
+    opacity: 1;
+}
