--- a/Armada.WebApp/Views/Shared/Error.cshtml
+++ b/Armada.WebApp/Views/Shared/Error.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "Error";
 }
 
+
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
+<p>An Inquisitor is looking into this matter and will get in touch with you shortly.</p>
 
